--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 @page {
     size: A4 landscape;
     margin: 10mm 15mm 10mm 15mm;
-    scale: 90%;
 }
 body {
     font-family: "Times New Roman", serif;
@@ -285,11 +284,10 @@ button {
 /* Print mode */
 @media print {
     .card, #printBtn, h1 { display: none !important; }
-    body { background: white; }
+    body { background: white; zoom: 0.9; }
     .pass-page { box-shadow: none; border: none; }
     @page {
         margin: 10mm 15mm 10mm 15mm;
         size: A4 landscape;
-        scale: 90%;
     }
 }
